--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,12 @@
+#===============================================
+#======  Using Python 3.9 build Imange =========
+#===============================================
+
 # pull official base image
 FROM python:3.9.5-slim-buster
+
+# maintainer
+LABEL maintainer="Duy Nguyen <duyngunyenngoc@hotmail.com>"
 
 # set work directory
 WORKDIR /app
@@ -10,10 +17,18 @@ ENV PYTHONUNBUFFERED 1
 
 # install dependencies
 RUN pip install --upgrade pip
-COPY ./requirements.txt .
+
+RUN pip3 install pipenv
+COPY Pipfile* /app/
+
+ONBUILD RUN set -ex && pipenv install --deploy --system
+
+# RUN pipenv lock --requirements > requirements.txt
+
+COPY ./requirements.txt /app/requirements.txt 
 RUN pip install -r requirements.txt
 
 # copy project
-COPY /app .
+COPY ./app/* /app/
 
 EXPOSE 8081 5555
