--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,8 @@ webdavclient3==3.14.5
 datetime==4.3
 ldap3==2.9.1
 celery==5.1.2
+flower==1.0.0
+redis==3.5.3
 
 # Deep Learning document classify
 elasticsearch==7.13.4
