--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,8 @@ ldap3==2.9.1
 celery==5.1.2
 flower==1.0.0
 redis==3.5.3
+aiofiles==0.7.0
+Jinja2==3.0.1
 
 # Deep Learning document classify
 elasticsearch==7.13.4
