--- a/backend/app/env-stag.ini
+++ b/backend/app/env-stag.ini
@@ -1,5 +1,5 @@
 [project]
-name = Web Management
+name = A Pot
 host_name = localhost
 environment = staging
 
@@ -13,15 +13,6 @@ host = localhost
 port = 80
 host = localhost
 
-
-; [database]
-; user = apot
-; pass = 1q2w3e4r
-; host = 161.117.87.31
-; port = 5432
-; database = apot
-; type = postgresql
-; schema = web-management
 
 [database]
 user = webmanagement
@@ -51,6 +42,7 @@ salt = 5\xe0v?\x17s\xdd:`Z\xbc\xb5\x85\xb43;
 access_expire = 4320
 fresh_expire = 10080
 secret_key = 1q2w3e4r
+
 
 [ldap]
 server = ldap://10.1.1.220:389
