--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
 
   worker:
     image: duynguyenngoc/apot:backend
-    command: celery -A worker.celery.tasks worker --loglevel=info --logfile=logs/celery.log
+    command: celery -A worker.celery worker --loglevel=info --logfile=logs/celery.log
     volumes:
       - ./backend/app:/app
     environment:
@@ -42,7 +42,7 @@ services:
 
   dashboard:
     build: ./backend
-    command: ["celery", "flower", "-A  worker.celery.tasks", "--broker=redis://redis:6379/0", "--port=5555"]  
+    command: ["celery", "flower", "-A  worker.celery", "--broker=redis://redis:6379/0", "--port=5555"]  
     ports:
       - 5555:5555
     environment:
