--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,53 +2,70 @@ version: '3.8'
 
 services:
 
-  # rabbitmq:
-  #   image: rabbitmq:latest
-  #   environment:
-  #     - RABBITMQ_DEFAULT_USER=guest
-  #     - RABBITMQ_DEFAULT_PASS=guest
-  #   ports:    
-  #     - "5672:5672"
 
   redis:
     image: redis:6-alpine
+    ports:
+      - "6379:6379"
+    command: redis-server --requirepass password
+
+
+  broker:
+    image: rabbitmq:latest
+    ports:
+      - "5672:5672"
+      - "55672:55672"
+    environment:
+      - DEFAULT_USER=guest
+      - DEFAULT_PASS=guest
+
 
   backend:
-    image: duynguyenngoc/apot:backend
+    image: duynguyenngoc/apot:base
     ports:
       - 8081:8081
     command: uvicorn main:app --host 0.0.0.0 --port 8081 --reload
     volumes:
       - ./backend/app:/app
     environment:
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_DB=0
+      - REDIS_PASS=password
+      - RABBITMQ_HOST=broker
+      - RABBITMQ_PORT=5672
+      - RABBITMQ_USER=guest
+      - RABBITMQ_PASS=guest
     depends_on:
       - redis
+      - broker
 
   worker:
-    image: duynguyenngoc/apot:backend
-    command: celery -A worker.celery worker --loglevel=info --logfile=logs/celery.log
+    image: duynguyenngoc/apot:base
+    command: celery -A worker.celery.ml worker --loglevel=info --concurrency=2 --queues ml -E  --logfile=logs/celery.log
     volumes:
       - ./backend/app:/app
     environment:
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_DB=0
+      - REDIS_PASS=password
+      - RABBITMQ_HOST=broker
+      - RABBITMQ_PORT=5672
+      - RABBITMQ_USER=guest
+      - RABBITMQ_PASS=guest
     depends_on:
       - backend
       - redis
 
 
-
-  dashboard:
-    build: ./backend
-    command: ["celery", "flower", "-A  worker.celery", "--broker=redis://redis:6379/0", "--port=5555"]  
-    ports:
-      - 5555:5555
-    environment:
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
-    depends_on:
-      - backend
-      - redis
-      - worker
+  # dashboard:
+  #   image:  duynguyenngoc/apot:base
+  #   command: ["celery", "flower", "-A  worker.celery", "--broker=amqp://guest:guest@broker:5672//", "--port=5555"]  
+  #   ports:
+  #     - 5555:5555
+  #   depends_on:
+  #     - broker
+  #     - backend
+  #     - redis
+  #     - worker
