fix maintainer email

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,7 +6,7 @@
 FROM python:3.9.5-slim-buster
 
 # maintainer
-LABEL maintainer="Duy Nguyen <duyngunyenngoc@hotmail.com>"
+LABEL maintainer="Duy Nguyen <duynguyenngoc@hotmail.com>"
 
 # set work directory
 WORKDIR /app
